--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import Card from "../components/Card.astro";
 <Layout title="这是一个astro页面">
   <main>
     <svg
-      class="astro-a"
+      class="astro-a"h'h
       width="495"
       height="623"
       viewBox="0 0 495 623"
@@ -42,6 +42,7 @@ import Card from "../components/Card.astro";
       <strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message
       above.
     </p>
+    <p>P211012490 董晴</p>
     <ul role="list" class="link-card-grid">
       <Card
         href="https://docs.astro.build/"
