--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -37,7 +37,7 @@ import Card from "../components/Card.astro";
     <a href="/book">电子书</a>
     <a href="/note">学习笔记</a>
     <a href="/about">关于</a>
-    <h1>Welcome to <span class="text-gradient">Astro</span></h1>
+    <h1> <span class="text-gradient">关于</span></h1>
     <h2>欢迎使用Astro建立信息服务</h2>
     <p>这是我验证发布流程用的信息。</p>
     <p class="instructions">
