--- a/src/pages/book.astro
+++ b/src/pages/book.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro";
 import Card from "../components/Card.astro";
 ---
 
-<Layout title="这是一个astro页面">
+<Layout title="电子书资源">
   <main>
     <svg
       class="astro-a"h'h
@@ -37,7 +37,7 @@ import Card from "../components/Card.astro";
     <a href="/book">电子书</a>
     <a href="/note">学习笔记</a>
     <a href="/about">关于</a>
-    <h1>Welcome to <span class="text-gradient">Astro</span></h1>
+    <h1><span class="text-gradient">电子书</span></h1>
     <h2>欢迎使用Astro建立信息服务</h2>
     <p>这是我验证发布流程用的信息。</p>
     <p class="instructions">
@@ -50,8 +50,8 @@ import Card from "../components/Card.astro";
     <ul role="list" class="link-card-grid">
       <Card
         href="https://docs.astro.build/"
-        title="Documentation"
-        body="Learn how Astro works and explore the official API docs."
+        title="《元白诗笺证稿》"
+        body="本文集中除《隋唐制度渊源略论稿》、《唐代政治史述论稿》和《元白诗笺证稿》在陈寅恪先生生前已有单行本外，其馀《寒柳堂集》、《金明馆丛稿》初编、二编所收旧文以及长篇专著《柳如是别传》等多经陈先生晚年修订。文集的整理校勘由复旦大学蒋天枢教授承担，编辑部只做了一些文字标点校订工作，至於学术观点方面则保存其历史面貌，未加改动。"
       />
       <Card
         href="https://astro.build/integrations/"
