--- a/src/pages/note.astro
+++ b/src/pages/note.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro";
 import Card from "../components/Card.astro";
 ---
 
-<Layout title="这是一个astro页面">
+<Layout title="电子书资源">
   <main>
     <svg
       class="astro-a"h'h
@@ -37,37 +37,10 @@ import Card from "../components/Card.astro";
     <a href="/book">电子书</a>
     <a href="/note">学习笔记</a>
     <a href="/about">关于</a>
-    <h1>Welcome to <span class="text-gradient">Astro</span></h1>
-    <h2>欢迎使用Astro建立信息服务</h2>
-    <p>这是我验证发布流程用的信息。</p>
-    <p class="instructions">
-      To get started, open the directory <code>src/pages</code> in your project.<br
-      />
-      <strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message
-      above.
-    </p>
-    <p>P211012490 董晴</p>
-    <ul role="list" class="link-card-grid">
-      <Card
-        href="https://docs.astro.build/"
-        title="Documentation"
-        body="Learn how Astro works and explore the official API docs."
-      />
-      <Card
-        href="https://astro.build/integrations/"
-        title="Integrations"
-        body="Supercharge your project with new frameworks and libraries."
-      />
-      <Card
-        href="https://astro.build/themes/"
-        title="Themes"
-        body="Explore a galaxy of community-built starter themes."
-      />
-      <Card
-        href="https://astro.build/chat/"
-        title="Community"
-        body="Come say hi to our amazing Discord community. ❤️"
-      />
+    <h1><span class="text-gradient">学习笔记</span></h1>
+    <ul>
+      <li><a href="/md/Astro的优势">Astro的优势</a></li>
+      <li><a href="/md/Astro的安装与部署">Astro的安装与部署</a></li>
     </ul>
   </main>
 </Layout>
