--- a/src/pages/note.astro
+++ b/src/pages/note.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Card from "../components/Card.astro";
+import HeaderNavigation from "../components/Nav.astro";
 ---
 
 <Layout title="电子书资源">
@@ -33,10 +34,7 @@ import Card from "../components/Card.astro";
         </linearGradient>
       </defs>
     </svg>
-    <a href="/">首页</a>
-    <a href="/book">电子书</a>
-    <a href="/note">学习笔记</a>
-    <a href="/about">关于</a>
+    <HeaderNavigation></HeaderNavigation>
     <h1><span class="text-gradient">学习笔记</span></h1>
     <ul>
       <li><a href="/md/Astro的优势">Astro的优势</a></li>
